--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         </div>
     </div>
     <!--Move these scripts to a free cdn, and link from there-->
-    <script src="js/lib/asncify/lib/utils.js" type="text/javascript"></script>
-    <script src="js/lib/asncify/asyncify.retry.js" type="text/javascript"></script>
-    <script src="js/lib/asncify/asyncify.waterfall.js" type="text/javascript"></script>
-    <script src="js/lib/asncify/lib/object.assign.js" type="text/javascript"></script>
-    <script src="js/lib/asncify/asyncify.series.js" type="text/javascript"></script>
-    <script src="js/lib/asncify/asyncify.parallel.js" type="text/javascript"></script>
-    <script src="js/lib/asncify/test.js" type="text/javascript"></script>
+    <script src="asncify/lib/utils.js" type="text/javascript"></script>
+    <script src="asncify/asyncify.retry.js" type="text/javascript"></script>
+    <script src="asncify/asyncify.waterfall.js" type="text/javascript"></script>
+    <script src="asncify/lib/object.assign.js" type="text/javascript"></script>
+    <script src="asncify/asyncify.series.js" type="text/javascript"></script>
+    <script src="asncify/asyncify.parallel.js" type="text/javascript"></script>
+    <script src="asncify/test.js" type="text/javascript"></script>
   </body>
 </html>
