--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
       <title>Asyncify</title>
   </head>
   <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12" id="output"></div>
-        </div>
-    </div>
+    <div id="output"></div>
     <!--Move these scripts to a free cdn, and link from there-->
     <script src="asncify/lib/utils.js" type="text/javascript"></script>
     <script src="asncify/asyncify.retry.js" type="text/javascript"></script>
