--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
       <title>Asyncify</title>
   </head>
   <body>
-    <div id="output"></div>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-4"></div>
+            <div class="col-xs-8" id="out"></div>
+        </div>
+    </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--Move these scripts to a free cdn, and link from there-->
     <script src="asncify/lib/utils.js" type="text/javascript"></script>
     <script src="asncify/asyncify.retry.js" type="text/javascript"></script>
